tests/ui/lang-items/fn-fn_mut-call-ill-formed.fn_bad_sig.stderr
error: failed to find an overloaded call trait for closure call
  --> $DIR/fn-fn_mut-call-ill-formed.rs:42:5
   |
LL |     a();
   |     ^^^
   |
   = help: make sure the `fn`/`fn_mut`/`fn_once` lang items are defined and have associated `call`/`call_mut`/`call_once` functions

error: failed to find an overloaded call trait for closure call
  --> $DIR/fn-fn_mut-call-ill-formed.rs:47:5
   |
LL |     b();
   |     ^^^
   |
   = help: make sure the `fn`/`fn_mut`/`fn_once` lang items are defined and have associated `call`/`call_mut`/`call_once` functions

error: aborting due to 2 previous errors

